Pin CMake to 3.22

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,7 +79,10 @@ jobs:
                     python-version: ${{ matrix.python }}
 
             -   name: Update CMake
-                uses: jwlawson/actions-setup-cmake@v1.14
+                uses: jwlawson/actions-setup-cmake@v2
+                with:
+                    # https://github.com/pybind/pybind11/blob/914c06fb252b6cc3727d0eedab6736e88a3fcb01/CMakeLists.txt#L13C34-L13C38
+                    cmake-version: '3.22.x'
 
             -   name: Setup annotations on Linux
                 if: runner.os == 'Linux'
